# Python-Pypi-Analysis

./: .gitignore  .pre-commit-config.yaml  README.rst  requirements.txt  setup.cfg
python_pypi_analysis/: controller.py  main.py
python_pypi_analysis/actions/: bug_information.py  pypi_information.py  source_analysis.py  task.py
python_pypi_analysis/models/: file.py  package.py
python_pypi_analysis/utilities/: configuration.py  database.py
