[metadata]
name = Python Pypi Analysis
version = 0.1.0
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Package to analyse Pypi.org packages
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/petermcd/Python-Pypi-Analysis
project_urls =
    Bug Tracker = https://github.com/petermcd/Python-Pypi-Analysis/issues
    Source = https://github.com/petermcd/Python-Pypi-Analysis
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
install_requires =
    mariadb
    python-dotenv
    radon
    requests

[options]
packages = find:
python_requires = >=3.10

[options.extras_require]
build = wheel; build;
dev = ipython; pre-commit;

[options.entry_points]
console_scripts = analyse-projects = python_pypi_analysis.main:run

[black]
target-version = ['py310']

[flake8]
max-line-length = 120
exclude = venv

[isort]
profile = black

[mypy-google.*]
ignore_missing_imports = True

[mypy-mariadb.*]
ignore_missing_imports = True
